correction link img work

--- a/src/content/work/ISO27001.md
+++ b/src/content/work/ISO27001.md
@@ -1,7 +1,7 @@
 ---
 title: ISO/IEC 27001:2022
 publishDate: 2024-04-02 00:00:00
-img: /assets/iso.jpg
+img: /portfolio/assets/iso.jpg
 img_alt: Certificat
 description: |
   Je suis détenteur d'une certification ISO/IEC 27001:2022 Foundation attribué par PECB
