--- a/src/content/work/ISO27001.md
+++ b/src/content/work/ISO27001.md
@@ -4,13 +4,13 @@ publishDate: 2024-04-02 00:00:00
 img: /portfolio/assets/iso.jpg
 img_alt: Certificat
 description: |
-  Je suis détenteur d'une certification ISO/IEC 27001:2022 Foundation attribué par PECB
+  Certificat ISO/IEC 27001:2022 Foundation attribué par PECB
 tags:
   - Gouvernance
-  - Normmes
+  - Normes
 ---
 
-J'ai eu l'occcasion lors de ma formation POEC Développeur en cybersécurité d'être formé aux normes de la famille ISO 27 000 pendant quelques jours. 
-A la suite de cette formation j'ai pû recevoir la certification distribué par l'organisme PECB après un examen.
+J'ai eu l'occasion lors de ma formation POEC Développeur en cybersécurité d'être formé aux normes de la famille ISO 27 000 pendant quelques jours. 
+À la suite de cette formation, j'ai pu recevoir la certification distribuée par l'organisme PECB après un examen.
 
 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ecb43949-691c-47d6-851c-a7e6c2194d2d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
