faute d'ortho encore...

--- a/src/content/work/ISO27001.md
+++ b/src/content/work/ISO27001.md
@@ -11,6 +11,6 @@ tags:
 ---
 
 J'ai eu l'occasion lors de ma formation POEC Développeur en cybersécurité d'être formé aux normes de la famille ISO 27 000 pendant quelques jours. 
-À la suite de cette formation, j'ai pu recevoir la certification distribuée par l'organisme PECB après un examen.
+À l'issue de cette formation, j'ai passsé un examen qui m'a permis de décrocher la certification distribuée par l'organisme PECB.
 
 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ecb43949-691c-47d6-851c-a7e6c2194d2d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
